--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "monaco-editor": "^0.25.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
